Fixed Cloudee on small screen
Added fluid tag for icon image so layout shrinks on < 350px

--- a/css/global.less
+++ b/css/global.less
@@ -253,8 +253,8 @@ li,
 img {
 	opacity: 1;
 	visibility: visible; /* Old IE */
-	-webkit-transition: opacity 0.24s ease-in-out;
-	transition: opacity 0.24s ease-in-out;
+	-webkit-transition: opacity 0.12s ease-in-out;
+	transition: opacity 0.12s ease-in-out;
 	}
 
 /* images */
